# detectron2

./: .gitignore  pyproject.toml  setup.cfg
detectron2/evaluation/: coco_evaluation.py
