[tool.poetry]
name = "detectron2"
version = "0.6.0"
description = "Detectron2 is Facebook AI Research's next generation library that provides state-of-the-art detection and segmentation algorithms. It is the successor of Detectron and maskrcnn-benchmark. It supports a number of computer vision research projects and production applications in Facebook."
authors = [ "facebookresearch", "Johannes Strodel<johannes.strodel@aicendence.com.com>" ]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "*"
# torch = [
#     {version = "1.12.1", platform = "darwin"},
#     {version = "^1.12.1+cu117", platform = "linux"},
#     {version = "^1.12.1+cu117", platform = "win32"}
# ]
# WIP: upgrade to torch 2.8 and cu12.8

# torch = [
#     { version = "==2.8.0", markers = "sys_platform == 'darwin'" },
#     { version = ">=2.8.0,<2.9", markers = "sys_platform == 'linux'", source = "pytorch-cu126" },
#     { version = ">=2.8.0,<2.9", markers = "sys_platform == 'win32'", source = "pytorch-cu126" }
# ]
torch = [
  { version = "==2.4.1", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "PyPI"},
  { version = ">=2.4.1,<2.5", markers = "sys_platform != 'darwin'", source = "pytorch-cu121" }
]
torchaudio = [
  { version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "PyPI"},
  { version = ">=2.4.1,<2.5", markers = "sys_platform != 'darwin'", source = "pytorch-cu121" }
]
torchvision = [
  { version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "PyPI"},
  { version = ">=0.19.1,<0.20", markers = "sys_platform != 'darwin'", source = "pytorch-cu121" }
]
# torchaudio = [
#     { version = "==2.8.0", markers = "sys_platform == 'darwin'" },
#     { version = ">=2.8.0,<2.9", markers = "sys_platform == 'linux'", source = "pytorch-cu126" },
#     { version = ">=2.8.0,<2.9", markers = "sys_platform == 'win32'", source = "pytorch-cu126" }
# ]
# torchvision = [
#     { version = "==0.23.0", markers = "sys_platform == 'darwin'" },
#     { version = ">=0.23.0,<0.24", markers = "sys_platform == 'linux'", source = "pytorch-cu126" },
#     { version = ">=0.23.0,<0.24", markers = "sys_platform == 'win32'", source = "pytorch-cu126" }
# ]
pillow = "*"
matplotlib = "*"
pycocotools = "*"
termcolor = "*"
yacs = "*"
tabulate = "*"
cloudpickle = "*"
tensorboard = "*"
tqdm = "*"
fvcore = { git = "https://github.com/normster/fvcore.git" }
iopath = "*"
future = "*"
pydot = "*"
omegaconf = "*"
hydra-core = "*"
black = "*"
timm = "*"
fairscale = "*"
packaging = "*"
scipy = "*"
shapely = "*"
pygments = "*"
psutil = "*"
panopticapi = { url = "https://github.com/cocodataset/panopticapi/archive/master.zip" }
dataclasses = { markers = "python_version < '3.7'", version = "*" }
opencv-python = "^4.12.0.88"

[tool.poetry.group.dev.dependencies]
flake8 = "3.8.1"
isort = "4.3.21"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"

[build-system]
requires = [
    "setuptools >= 80.9.0", 
    "wheel >= 0.45.1",
    "torch >= 2.4.1"
]
build-backend = "setuptools.build_meta"
